# class3

./: .clang-format  .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  main.cpp
src/SummingExamples/: CMakeLists.txt  CStyleArrays.cpp  CppStyleArrays.cpp  SummingExamples.hpp
